create routes for landing page and login page

--- a/client/src/components/Background/Background.css
+++ b/client/src/components/Background/Background.css
@@ -1,5 +1,6 @@
-.landing_page {
-  background: rgba(00, 00, 00, 0.3);
+.background {
+  /* background: rgba(00, 00, 00, 0.7); */
+  /* background: red; */
   position: absolute;
   width: 100%;
 
