--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -5,13 +5,7 @@
   padding: 1rem 2rem;
   align-items: center;
 }
-.header span {
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
-  font-size: 40px;
-  line-height: 54px;
-  color: white;
-}
+
 .header ul {
   list-style-type: none;
   margin: 0;
@@ -23,9 +17,9 @@
 }
 .logo {
   width: 15%;
-  display: flex;
+  /* display: inline-flex; */
   justify-content: center;
-  align-self: center;
+  align-items: center;
 }
 .header li {
   float: left;
@@ -37,25 +31,39 @@
   justify-content: center;
 }
 .header a {
-  display: block;
+  /* display: block; */
   padding: 8px;
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
   font-style: normal;
   font-size: 20px;
   font-weight: 400;
+  display: flex;
   text-decoration: none;
   color: white;
 }
+.header a:hover {
+  opacity: 0.6;
+}
 .sign_in {
-  border: 1px solid #ccc;
+  border: 1px solid #a30e3b;
+  background: #a30e3b;
   border-radius: 10px;
 }
 
 @media screen and (max-width: 810px) {
+  .logo {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  }
   .header {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
+  }
+  .header span {
+    margin: 20px;
   }
   .header a {
     font-size: 15px;
