--- a/client/src/components/Background/Background.css
+++ b/client/src/components/Background/Background.css
@@ -5,11 +5,11 @@
   width: 100%;
 
   /* position: absolute; */
-  height: 100%;
+  /* height: 90vh; */
   z-index: 1;
 }
 :root {
   width: 100%;
   /* position: absolute; */
-  /* height: 100%; */
+  /* height: 100vh; */
 }
