--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -1,5 +1,5 @@
 .login_container {
-  /* background-color: red; */
+  background-color: red;
   height: 100%;
 }
 .login_form {
@@ -19,11 +19,12 @@
   justify-content: center;
   /* align-items: center; */
   margin: 0 auto;
-  position: fixed;
-  top: 50%;
+  position: absolute;
+  /* top: 50%; */
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  /*
+  -webkit-transform: translate(-50%, -50%); */
+  transform: translate(-50%);
 }
 h1,
 h2,
@@ -75,7 +76,7 @@ h4 {
 }
 input[type="checkbox"] {
   /* border: 2px solid #e67a8d; */
-  appearance: none;
+  /* appearance: none; */
   background-color: #fff;
   margin: 0;
   font: inherit;
@@ -86,7 +87,7 @@ input[type="checkbox"] {
   border-radius: 0.15em;
   /* margin-right: 2px; */
   margin-right: 5px;
-  /* transform: translateY(-0.075em); */
+  transform: translateY(-0.075em);
 }
 .signup_btn {
   border: 2px solid #e67a8d;
@@ -96,6 +97,10 @@ input[type="checkbox"] {
   padding: 16px;
   font-size: 1rem;
   font-weight: bolder;
+}
+.signup_btn:hover {
+  background: #e67a8d;
+  cursor: pointer;
 }
 .checkbox {
   border: 2px solid #e67a8d;
@@ -109,6 +114,18 @@ input[type="checkbox"] {
   border: none;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   margin: 10px 0 8px 0;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.signin_btn:hover {
+  /* -webkit-transform: translateY(2px);
+  transform: translateY(2px); */
+  cursor: pointer;
+
+  /* background: #e5e5e5; */
+  box-shadow: inset 0px 0px 5px #ffffff;
+  outline: none;
 }
 @media screen and (max-width: 815px) {
   .login_form {
@@ -119,4 +136,11 @@ input[type="checkbox"] {
   .login_form {
     width: 50%;
   }
+}
+.login_form a {
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: black;
 }
