--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -3,11 +3,11 @@
   background-size: cover;
   background-position: top;
   min-height: 100vh;
-  max-height: 100%;
+  max-height: 100vh;
   width: 100%;
   /* max-width: 100%; */
   z-index: -10000;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 @media screen and (max-width: 2000px) {
   .layout {
