--- a/client/src/components/SignUp/SignUp.css
+++ b/client/src/components/SignUp/SignUp.css
@@ -1,30 +1,59 @@
 .grid {
   background: rgba(00, 00, 00, 0.7);
-  height: 100%;
+  /* height: 80vh; */
 
   border-radius: 8px;
   /* width: 100%; */
 }
+*:focus {
+  outline: none;
+}
+h1,
+h2,
+h3,
+h4 {
+  padding: 0;
+  margin: 0;
+}
+.btn:focus {
+  background: #a30e3b;
+  border-color: #a30e3b;
+}
+.dropdown-item.active {
+  background: #a30e3b;
+}
+.dropdown-item:hover,
+.dropdown-item:focus {
+  background: #a30e3b;
+  opacity: 0.7;
+}
 .container_signup {
   margin: 1rem 3rem;
-  padding: 0;
-  /* width: 100%; */
-  height: 100%;
+  padding: 1rem;
+  /* background-color: green; */
+  /* width: 80%; */
+
+  height: 80vh;
 }
 .profile_details {
   /* background: rgba(0, 0, 0, 0.8); */
   /* background-color: red; */
-  height: 100%;
+  top: 0;
+  padding-top: 9rem;
+  /* margin-top: 40px; */
+  height: 80vh;
+  /* height: fit-content; */
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* margin: 1rem; */
+  overflow: scroll;
   /* align-items: center; */
 }
 .profile_details .grid {
   margin-bottom: 10px;
-  height: 100%;
+  /* height: 80%; */
   /* background-color: red; */
 }
 .signup {
@@ -40,6 +69,7 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .row_gap {
+  height: 80vh;
   /* padding: 1rem; */
 }
 .grid_images {
@@ -65,9 +95,24 @@
 input::placeholder {
   color: white;
 }
+input:focus {
+  color: white;
+  border: none;
+  outline: none;
+}
+.dropdown-toggle:focus,
+.dropdown-toggle:hover {
+  background: #a30e3b;
+  border: none;
+  outline: none;
+}
 
 input[type="date"] {
   /* background: transparent; */
   color: white;
   /* fill: white; */
+}
+input[type="date"]::before {
+  content: attr(placeholder);
+  width: 100%;
 }
