--- a/client/src/components/SignUp/SignUp.css
+++ b/client/src/components/SignUp/SignUp.css
@@ -1,9 +1,15 @@
 .grid {
   background: rgba(00, 00, 00, 0.7);
   /* height: 80vh; */
+  margin: 0;
 
   border-radius: 8px;
   /* width: 100%; */
+}
+.justify {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 *:focus {
   outline: none;
