--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -44,10 +44,22 @@
 .header a:hover {
   opacity: 0.6;
 }
-.sign_in {
+/* .sign_in {
   border: 1px solid #a30e3b;
   background: #a30e3b;
   border-radius: 10px;
+} */
+.sign_in{
+  border-radius: 15px;
+  background: #212121;
+  box-shadow: inset 5px -5px 10px #1c1717,
+              inset -5px 5px 10px #322929;
+}
+.sign_in:hover{
+  border-radius: 15px;
+  background: #212121;
+  box-shadow: inset 5px -5px 10px #231d1d,
+              inset -5px 5px 10px #2b2323;
 }
 
 @media screen and (max-width: 810px) {
