--- a/client/src/components/LandingPage/landing.css
+++ b/client/src/components/LandingPage/landing.css
@@ -28,5 +28,8 @@
 }
 .coverImg{
     object-fit: contain;
+    width: 90%;
     border-radius: 10px;
+    margin-left: 1em;
+    margin-right: 1em;
 }
