--- a/client/src/components/Leetcode/Leetcode.css
+++ b/client/src/components/Leetcode/Leetcode.css
@@ -2,16 +2,20 @@
   background: rgba(00, 00, 00, 0.7);
   /* height: 80vh; */
   margin: 0;
-  /* pad */
+  padding: 1rem;
   border-radius: 8px;
   /* width: 100%; */
 }
 
-.language {
-  display: inline;
-}
 .heading {
   font-size: 20px;
+}
+hr {
+  padding: 0;
+  margin: 0;
+}
+.badge {
+  background: transparent;
 }
 #source {
   width: 100% !important;
@@ -40,6 +44,16 @@
 } */
 .language {
   width: 150px;
+  color: #a30e3b;
+  font-size: 20px;
+  background: #999999;
+  border: none;
+}
+.language:hover {
+  cursor: pointer;
+}
+.bg-primary {
+  background-color: transparent;
 }
 .run_btn,
 .run_btn:hover,
