--- a/client/src/components/Leetcode/Leetcode.css
+++ b/client/src/components/Leetcode/Leetcode.css
@@ -1,7 +1,7 @@
 .grid {
   background: rgba(00, 00, 00, 0.7);
   /* height: 80vh; */
-  margin: 0;
+  margin: 0 1rem;
   padding: 1rem;
   border-radius: 8px;
   /* width: 100%; */
