--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -33,6 +33,7 @@ h4 {
   margin: 0;
   padding: 0;
 }
+
 .login_form span {
   margin: 0;
   align-items: center;
@@ -56,9 +57,40 @@ h4 {
   background: transparent;
   color: #a30e3b;
 }
+@keyframes autofill {
+  0%,
+  100% {
+    color: #666;
+    background: red;
+  }
+}
+@-webkit-keyframes autofill {
+  0%,
+  100% {
+    color: #666;
+    background: red;
+  }
+}
+
+input:-webkit-autofill {
+  -webkit-animation-delay: 1s; /* Safari support - any positive time runs instantly */
+  -webkit-animation-name: autofill;
+  -webkit-animation-fill-mode: both;
+  -webkit-background-color: red !important;
+}
+
+input:-webkit-autofill {
+  background: none;
+  /* -webkit-box-shadow: 0 0 0 50px white inset; */
+}
+input:autofill {
+  background: none;
+  /* -webkit-box-shadow: 0 0 0 50px white inset; */
+}
 .login_input {
   border: none;
-  background: transparent;
+  background: none;
+  /* backdrop-filter: blur(9px); */
   margin: 2px;
   padding: 16px 0;
   font-size: 16px;
@@ -66,6 +98,7 @@ h4 {
 }
 .login_input::placeholder {
   color: #999999;
+  background: transparent;
 }
 .login_input:focus {
   color: black;
@@ -123,17 +156,23 @@ input[type="checkbox"]:checked {
   transform: translateY(-0.075em);
 }
 .signup_btn {
-  border: 2px solid #e67a8d;
+  /* border: 2px solid #e67a8d; */
   background: transparent;
   border-radius: 72px;
   margin: 10px 0 32px 0;
   padding: 16px;
   font-size: 1rem;
   font-weight: bolder;
+  border-radius: 83px;
+  background: #d3d3d3;
+  box-shadow: 5px 5px 10px #a5a5a5, -5px -5px 10px #ffffff;
 }
 .signup_btn:hover {
   background: #e67a8d;
   cursor: pointer;
+  border-radius: 83px;
+  background: #d3d3d3;
+  box-shadow: inset 5px 5px 10px #a5a5a5, inset -5px -5px 10px #ffffff;
 }
 .checkbox {
   border: 2px solid #e67a8d;
@@ -150,7 +189,11 @@ input[type="checkbox"]:checked {
   margin: 10px 0 8px 0;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  /* border-radius: 83px; */
+  /* background: #a30e3b;
+  box-shadow: 2px 2px 8px #7f0b2e, -2px -2px 8px #c71148; */
+  /* background: linear-gradient(145deg, #930d35, #ae0f3f); */
+  /* box-shadow: 2px 2px 6px #7f0b2e, -2px -2px 6px #c71148; */
 }
 .signin_btn:hover,
 .signin_btn:focus {
@@ -158,10 +201,14 @@ input[type="checkbox"]:checked {
   transform: translateY(2px); */
   cursor: pointer;
   color: black;
+  /* cursor: pointer;
+  color: black;
   background: #a30e3b;
-  /* background: #e5e5e5; */
   box-shadow: inset 0px 0px 5px #ffffff;
-  outline: none;
+  outline: none; */
+  border-radius: 83px;
+  background: #a30e3b;
+  box-shadow: inset 8px 8px 16px #7f0b2e, inset -8px -8px 16px #c71148;
 }
 @media screen and (max-width: 815px) {
   .login_form {
