--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -189,11 +189,12 @@ input[type="checkbox"]:checked {
   margin: 10px 0 8px 0;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  /* border-radius: 83px; */
-  /* background: #a30e3b;
-  box-shadow: 2px 2px 8px #7f0b2e, -2px -2px 8px #c71148; */
-  /* background: linear-gradient(145deg, #930d35, #ae0f3f); */
-  /* box-shadow: 2px 2px 6px #7f0b2e, -2px -2px 6px #c71148; */
+  background-image: linear-gradient(-45deg, #b7224f, #a30e3b, #8f0027);
+  /* width: 125px; */
+  /* height: 125px; */
+  /* border-radius: 34%; */
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.4),
+    -6px -6px 12px rgba(255, 255, 255, 1);
 }
 .signin_btn:hover,
 .signin_btn:focus {
@@ -209,6 +210,8 @@ input[type="checkbox"]:checked {
   border-radius: 83px;
   background: #a30e3b;
   box-shadow: inset 8px 8px 16px #7f0b2e, inset -8px -8px 16px #c71148;
+  box-shadow: inset 6px 6px 12px rgba(0, 0, 0, 0.3),
+    inset -6px -6px 12px rgba(255, 255, 255, 0.2);
 }
 @media screen and (max-width: 815px) {
   .login_form {
