alternate chat.js

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,4 +1,4 @@
-.pageStyles  {
+/* .pageStyles  {
     align-items: 'center';
     background: '#282c34';
     display: 'flex';
@@ -53,4 +53,4 @@
 .buttonStyles {
     font-size: '1.1rem';
     padding: '10px 15px';
-  };
+  }; */
