--- a/client/src/components/Messenger/Chat.css
+++ b/client/src/components/Messenger/Chat.css
@@ -3,6 +3,7 @@
   width: 60%;
   height: 80vh;
   background-color: #a30e3b;
+  border-radius: 15px;
 
   grid-template-columns: 350px auto;
   grid-template-rows: 60px auto 60px;
