--- a/client/src/components/SignUp/SignUp.css
+++ b/client/src/components/SignUp/SignUp.css
@@ -1,6 +1,8 @@
 .grid {
   background: rgba(00, 00, 00, 0.7);
   margin: 0;
+
+  /* height: 100%; */
   border-radius: 8px;
 }
 .justify {
@@ -25,6 +27,9 @@ h3,
 h4 {
   padding: 0;
   margin: 0;
+}
+h4 {
+  margin-bottom: 10px;
 }
 .btn:focus {
   background: #a30e3b;
@@ -65,17 +70,32 @@ h4 {
   margin: 0 auto;
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-color: #ae303b;
+  /* width: 86px; */
+  /* height: 86px; */
+  /* border-radius: 38%; */
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3),
+    -2px -2px 8px rgba(255, 255, 255, 0.2);
+}
+.signup:hover,
+.signup:focus {
+  background-color: #ae303b;
+  box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.3),
+    inset -4px -4px 10px rgba(255, 255, 255, 0.3);
 }
 .row_gap {
-  height: 80vh;
+  height: 100%;
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   width: 100%;
 }
 .grid_images {
-  height: 70%;
-  position: relative;
-  top: 15%;
+  height: fit-content;
+  /* position: absolute; */
+  /* top: 15%; */
+  /* padding:1rem; */
+  color: white;
   width: 55%;
   display: flex;
   flex-direction: column;
@@ -115,4 +135,49 @@ input[type="date"] {
 input[type="date"]::before {
   content: attr(placeholder);
   width: 100%;
+}
+.dropzone {
+  /* background: red; */
+  font-size: 24px;
+  /* position: absolute; */
+  /* width: 100%; */
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* height: 100%; */
+  /* bottom: 0; */
+  /* margin: 0 auto; */
+  /* height: 40%; */
+  border: 2px dashed rgba(163, 14, 59, 0.5);
+}
+.dropzone:hover {
+  cursor: pointer;
+}
+.section {
+  /* height: 100%;
+  width: 100%; */
+  position: relative;
+  /* background: blue; */
+}
+.input_image {
+  background: orange;
+}
+.image_container section {
+  background: orange;
+  height: 10%;
+  /* width: 100%; */
+  position: relative;
+}
+.images {
+  /* background: red; */
+  display: flex;
+  flex-wrap: wrap;
+  /* margin: 1rem; */
+}
+.image {
+  width: 25%;
+  margin: 10px;
+  border-radius: 16px;
 }
