--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -6,6 +6,19 @@
 
 .profileHeader {
     display: flex;
+    /* flex-direction: row; */
+    /* background-color: red; */
+}
+
+.profileHeader div {
+    display: flex;
+    flex-direction: column;
+}
+
+.profileHeader2 {
+    display: flex;
+    flex-direction: row;
+    /* background-color: purple; */
 }
 
 .containerLeftColumn {
