--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,56 +1,187 @@
-/* .pageStyles  {
-    align-items: 'center';
-    background: '#282c34';
-    display: 'flex';
-    justify-content: 'center';
-    min-height: '100vh';
-  };
 
-.chatStyles  {
-  background-color: #4a0724;
-    display: 'flex';
-    flex-direction: 'column';
-    height: '50vh';
-    width: '50%';
-  };
-
-.headerStyles  {
-    background: '#323742';
-    color: 'white';
-    font-size: '1.4rem';
-    padding: '10px 15px';
-  };
-
-.listStyles  {
-    align-items: 'flex-start';
-    background-color: 'white';
-    display: 'flex';
-    flex-direction: 'column';
-    flex-grow: 1;
-    overflow: 'auto';
-    padding: '10px';
-  };
-
-.messageStyles {
-    background-color: '#eee';
-    border-radius: '5px';
-    color: '#333';
-    font-size: '1.1rem';
-    margin: '5px';
-    padding: '8px 15px';
-  };
-
-.footerStyles {
-    display: 'flex';
-  };
-
-.inputStyles {
-    flex-grow: 1;
-    font-size: '1.1rem';
-    padding: '10px 15px';
-  };
-
-.buttonStyles {
-    font-size: '1.1rem';
-    padding: '10px 15px';
-  }; */
+body {
+  /* color: #585858; */
+}
+/* .app-simple.light {
+  --app-background: #fff;
+  --app-color: #585858;
+  --app-avatar-background: #f0f3f7;
+  --app-info-color: #999;
+  --app-info-border: #d7e0e9;
+  --app-chat-background: #f0f3f7;
+  --app-people-color: #585858;
+  --app-people-active-color: #5babfc;
+} */
+.app-simple.dark {
+  /* --app-background: #292b2f; */
+  /* --app-color: #fff; */
+  --app-avatar-background: #414348;
+  --app-info-color: #999;
+  --app-info-border: #414348;
+  /* --app-chat-background: #2f3136; */
+  --app-people-color: #dcddde;
+  --app-people-active-color: #de2440;
+}
+.app-simple {
+  /* background: var(--app-background); */
+  color: var(--app-color);
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+.app-simple .pn-member-list {
+  --member__padding: 9px 0;
+}
+.app-simple .toggle {
+  margin-top: 50px;
+  position: relative;
+}
+.app-simple .toggle span {
+  font-size: 12px;
+  font-weight: bold;
+  margin-left: 24px;
+}
+.app-simple .toggle button {
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+}
+.app-simple .channels {
+  background: var(--app-background);
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 300px;
+}
+.app-simple .channels h4 {
+  margin: 34px 24px 12px;
+}
+.app-simple .user {
+  display: flex;
+  padding: 46px 24px 20px;
+}
+.app-simple .user h4 {
+  flex-grow: 1;
+  margin: 8px 0;
+}
+.app-simple .user img {
+  background: var(--app-avatar-background);
+  display: block;
+  margin: 0 24px 0 0;
+  width: 36px;
+  height: 36px;
+  border-radius: 36px;
+}
+.app-simple .info {
+  padding: 24px 24px 0;
+}
+.app-simple .info h4 {
+  margin: 0 0 2px;
+}
+.app-simple .info small {
+  color: var(--app-info-color);
+}
+.app-simple .chat {
+  /* background: var(--app-chat-background); */
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  margin: 30px 30px 30px 0;
+  position: relative;
+}
+.app-simple .chat hr {
+  background-color: var(--app-info-border);
+  border: 0;
+  height: 1px;
+  margin: 18px 0 0;
+}
+.app-simple .members {
+  background: var(--app-background);
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  transform: translateX(310px);
+  transition: 0.3s ease-in-out;
+  width: 0;
+}
+.app-simple .members.shown {
+  transform: none;
+  width: 310px;
+}
+.app-simple .members h4 {
+  margin-top: 54px;
+}
+.app-simple .members .close {
+  margin-right: 24px;
+}
+.app-simple .close {
+  cursor: pointer;
+  display: none;
+  float: right;
+}
+.app-simple .hamburger {
+  display: none;
+  float: left;
+  font-size: 24px;
+  margin-right: 15px;
+}
+.app-simple .people {
+  align-items: center;
+  color: var(--app-people-color);
+  cursor: pointer;
+  display: flex;
+  font-size: 13px;
+  position: absolute;
+  right: 34px;
+  top: 34px;
+  z-index: 1;
+}
+.app-simple .people.active {
+  color: var(--app-people-active-color);
+}
+.app-simple .people span {
+  margin: 2px 8px 0 0;
+}
+@media (max-width: 950px) {
+  .app-simple .channels, .app-simple .members.shown {
+    width: 200px;
+ }
+}
+@media (max-width: 700px) {
+  .app-simple .channels {
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    transition: 0.3s ease-in-out;
+    width: 100%;
+ }
+  .app-simple .channels:not(.shown) {
+    transform: translateX(-100%);
+ }
+  .app-simple .user {
+    padding-top: 24px;
+ }
+  .app-simple .close {
+    display: inline-block;
+ }
+  .app-simple .chat {
+    margin: 5px;
+ }
+  .app-simple .hamburger {
+    display: inline;
+ }
+  .app-simple .members.shown {
+    height: 100%;
+    padding: 24px;
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+ }
+  .app-simple .members.shown h4 {
+    margin-top: 0;
+ }
+  .app-simple .members.shown h4 span {
+    margin-right: 48px;
+ }
+}
