--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -48,3 +48,22 @@ a {
   /* position: absolute;
   left: 5%; */
 }
+@media screen and (max-width: 1224px) {
+  .menu {
+    /* background: red; */
+    width: 100%;
+    position: relative;
+    display: flex;
+
+    /* flex-direction: row; */
+    height: fit-content;
+  }
+  .menu ul {
+    /* background: blue; */
+    width: 100%;
+    /* height: 100%; */
+    /* left: 0; */
+    display: flex;
+    justify-content: center;
+  }
+}
