--- a/client/src/components/SignUp/SignUp.css
+++ b/client/src/components/SignUp/SignUp.css
@@ -181,3 +181,51 @@ input[type="date"]::before {
   margin: 10px;
   border-radius: 16px;
 }
+
+/* Slider CSS */
+.horizontal-slider {
+  width: 100%;
+  max-width: 500px;
+  height: 50px;
+  border: 1px solid grey;
+}
+
+.example-thumb {
+  font-size: 0.9em;
+  text-align: center;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  border: 5px solid gray;
+  box-sizing: border-box;
+  cursor: grab;
+}
+
+.example-thumb.active {
+  background-color: grey;
+}
+
+.example-track {
+  position: relative;
+  background: #ddd;
+}
+
+.example-track.example-track-1 {
+  background: #a30e3b;
+}
+
+.example-track.example-track-2 {
+  background-color: grey;
+}
+
+.horizontal-slider .example-track {
+  top: 20px;
+  height: 10px;
+}
+
+.horizontal-slider .example-thumb {
+  top: 1px;
+  width: 50px;
+  height: 48px;
+  line-height: 38px;
+}
