--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,6 +1,6 @@
 
 body {
-  /* color: #585858; */
+  color: #585858;
 }
 /* .app-simple.light {
   --app-background: #fff;
@@ -11,60 +11,60 @@ body {
   --app-chat-background: #f0f3f7;
   --app-people-color: #585858;
   --app-people-active-color: #5babfc;
-} */
+}
 .app-simple.dark {
-  /* --app-background: #292b2f; */
-  /* --app-color: #fff; */
+  --app-background: #292b2f;
+  --app-color: #fff;
   --app-avatar-background: #414348;
   --app-info-color: #999;
   --app-info-border: #414348;
-  /* --app-chat-background: #2f3136; */
+  --app-chat-background: #2f3136;
   --app-people-color: #dcddde;
   --app-people-active-color: #de2440;
-}
+} */
 .app-simple {
-  /* background: var(--app-background); */
+  /* background: red; */
   color: var(--app-color);
   display: flex;
   height: 100vh;
   overflow: hidden;
 }
-.app-simple .pn-member-list {
+.pn-member-list {
   --member__padding: 9px 0;
 }
-.app-simple .toggle {
+.toggle {
   margin-top: 50px;
   position: relative;
 }
-.app-simple .toggle span {
+.toggle span {
   font-size: 12px;
   font-weight: bold;
   margin-left: 24px;
 }
-.app-simple .toggle button {
+.toggle button {
   left: 50%;
   position: absolute;
   transform: translateX(-50%);
 }
-.app-simple .channels {
+.channels {
   background: var(--app-background);
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
   width: 300px;
 }
-.app-simple .channels h4 {
+.channels h4 {
   margin: 34px 24px 12px;
 }
-.app-simple .user {
+.user {
   display: flex;
   padding: 46px 24px 20px;
 }
-.app-simple .user h4 {
+.user h4 {
   flex-grow: 1;
   margin: 8px 0;
 }
-.app-simple .user img {
+.user img {
   background: var(--app-avatar-background);
   display: block;
   margin: 0 24px 0 0;
@@ -72,17 +72,19 @@ body {
   height: 36px;
   border-radius: 36px;
 }
-.app-simple .info {
+.info {
   padding: 24px 24px 0;
+  /* background: green; */
 }
-.app-simple .info h4 {
+.info h4 {
   margin: 0 0 2px;
 }
-.app-simple .info small {
+.info small {
   color: var(--app-info-color);
 }
-.app-simple .chat {
+.chat {
   /* background: var(--app-chat-background); */
+  /* background-color: aqua; */
   border-radius: 25px;
   display: flex;
   flex-direction: column;
@@ -90,12 +92,37 @@ body {
   margin: 30px 30px 30px 0;
   position: relative;
 }
-.app-simple .chat hr {
+.chat hr {
   background-color: var(--app-info-border);
   border: 0;
   height: 1px;
   margin: 18px 0 0;
 }
+
+.pn-channel-list {
+  height: 100%;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.pn-channel {
+  /* align-items: var(--channel__alignItems); */
+  /* background: var(--channel__background); */
+  cursor: pointer;
+  display: flex;
+  /* justify-content: var(--channel__justifyContent); */
+  padding: var(--channel__padding);
+  position: relative;
+}
+
+.pn-channel--active{
+  background: #e67a8d6e;
+}
+
+.pn-channel--hover{
+  background: #e67a8ec2;
+}
+
 .app-simple .members {
   background: var(--app-background);
   display: flex;
@@ -105,28 +132,28 @@ body {
   transition: 0.3s ease-in-out;
   width: 0;
 }
-.app-simple .members.shown {
+.members.shown {
   transform: none;
   width: 310px;
 }
-.app-simple .members h4 {
+.members h4 {
   margin-top: 54px;
 }
-.app-simple .members .close {
+.members .close {
   margin-right: 24px;
 }
-.app-simple .close {
+.close {
   cursor: pointer;
   display: none;
   float: right;
 }
-.app-simple .hamburger {
+.hamburger {
   display: none;
   float: left;
   font-size: 24px;
   margin-right: 15px;
 }
-.app-simple .people {
+.people {
   align-items: center;
   color: var(--app-people-color);
   cursor: pointer;
@@ -137,10 +164,10 @@ body {
   top: 34px;
   z-index: 1;
 }
-.app-simple .people.active {
+.people.active {
   color: var(--app-people-active-color);
 }
-.app-simple .people span {
+.people span {
   margin: 2px 8px 0 0;
 }
 @media (max-width: 950px) {
