--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,14 +1,18 @@
 .profileContainer {
     border: 1px #ffffff;
-    background-color: #ffffff54;
+    /* background-color: #ffffff54; */
     color: white
 }
 
 .profileHeader {
     display: flex;
-    background: #ff000045;
+    /* background: #ff000045; */
     /* flex-direction: row; */
     /* background-color: red; */
+}
+
+.h2 span {
+    font-size: 30px;
 }
 
 .profileHeader div {
@@ -18,23 +22,24 @@
 
 .profileHeader2 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background: #00f7ff45;
     /* background-color: purple; */
 }
 
 .containerLeftColumn {
 border: 1px #ffffff;
-background: #ffff0065;
+/* background: #ffff0065; */
 }
 
 .containerRightColumn {
     border: 1px #ffffff;
-    background: #d000ff65;
+    /* background: #d000ff65; */
 }
 
 .h2 {
-    display: inline
+    display: inline;
+    font-size: 50px
 }
 
 .age {
@@ -43,10 +48,24 @@ background: #ffff0065;
 }
 
 .job {
-    display: inline
+    display: inline-flex;
+    background-color: #00800078
 }
 
 .city {
+    display: inline-flex;
+    flex-direction:row-reverse;
+    /* padding: 10px; */
+    background-color: #fb00ff78
+}
+
+.profileLinkButtons {
+    justify-content: center;
     display: inline;
-    padding: 10px
+    max-width: auto;
+    flex-wrap: wrap;
+    padding: 1px;
+    margin: 5px;
+    flex-direction: column;
+
 }
