--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -2,7 +2,7 @@
   background-color: #212121;
   background-size: cover;
   background-position: top;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   max-height: 100vh;
   width: 100%;
   z-index: -10000;
