--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -29,11 +29,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   /* background: #00f7ff45; */
   /* background-color: purple; */
 }
 
-.containerLeftColumn,
+.containerLeftColumn {
+  border: 1px #ffffff;
+}
 .containerRightColumn {
   border: 1px #ffffff;
   /* background: #ffff0065; */
