--- a/client/src/components/SignUp/SignUp.css
+++ b/client/src/components/SignUp/SignUp.css
@@ -68,7 +68,8 @@ h4 {
   border: none;
   width: 45%;
   margin: 0 auto;
-
+  display: flex;
+  justify-content: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-color: #ae303b;
   /* width: 86px; */
@@ -182,7 +183,7 @@ input[type="date"]::before {
   border-radius: 16px;
 }
 
-.col{
+.col {
   margin-left: 1em;
   margin-right: 1em;
 }
