--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -23,7 +23,8 @@ a {
   padding: 20px;
 }
 a:hover {
-  color: #e67a8d;
+  color: #a30e3b;
+  opacity: 0.7;
 }
 .menu ul {
   /* background: red; */
