--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -16,7 +16,7 @@
   align-items: center;
 }
 .logo {
-  width: 15%;
+  width: 20%;
   /* display: inline-flex; */
   justify-content: center;
   align-items: center;
@@ -49,17 +49,34 @@
   background: #a30e3b;
   border-radius: 10px;
 } */
-.sign_in{
-  border-radius: 15px;
+.sign_in {
+  /* border-radius: 15px;
   background: #212121;
   box-shadow: inset 5px -5px 10px #1c1717,
-              inset -5px 5px 10px #322929;
+              inset -5px 5px 10px #322929; */
+
+  background: #a30e3b;
+  padding: 10px;
+  /* font-size: 1rem; */
+  /* font-weight: 500; */
+  border-radius: 16px;
+  border: none;
+  /* width: 45%; */
+  /* margin: 0 auto; */
+  /* display: flex; */
+  /* justify-content: center; */
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-color: #ae303b;
+  /* width: 86px; */
+  /* height: 86px; */
+  /* border-radius: 38%; */
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7),
+    -1px -1px 8px rgba(255, 255, 255, 0.2);
 }
-.sign_in:hover{
+.sign_in:hover {
   border-radius: 15px;
   background: #212121;
-  box-shadow: inset 5px -5px 10px #231d1d,
-              inset -5px 5px 10px #2b2323;
+  box-shadow: inset 5px -5px 10px #231d1d, inset -5px 5px 10px #2b2323;
 }
 
 @media screen and (max-width: 810px) {
