--- a/client/src/components/Leetcode/Leetcode.css
+++ b/client/src/components/Leetcode/Leetcode.css
@@ -72,3 +72,26 @@ hr {
 .run_btn:hover {
   opacity: 0.8;
 }
+.nav-link {
+  color: #e67a8d;
+  border: 1px solid #a30e3b;
+}
+.nav-link:hover {
+  color: #e67a8d;
+  border: 1px solid #a30e3b;
+}
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  background: #a30e3b;
+  border-radius: 0;
+  color: black;
+  border: none;
+  border-bottom: transparent;
+}
+.nav-tabs {
+  border-radius: none;
+  border-bottom: transparent;
+}
+.nav-tabs:hover {
+  border: 1px solid black;
+}
