--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -241,14 +241,19 @@ input[type="checkbox"]:checked {
   box-shadow: inset 6px 6px 12px rgba(0, 0, 0, 0.3),
     inset -6px -6px 12px rgba(255, 255, 255, 0.2);
 }
-@media screen and (max-width: 815px) {
+@media screen and (max-width: 1200px) {
   .login_form {
-    width: 40%;
+    width: 45%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .login_form {
+    width: 50%;
   }
 }
 @media screen and (max-width: 465px) {
   .login_form {
-    width: 50%;
+    width: 80%;
   }
 }
 .login_form a {
