--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,10 +1,17 @@
+.row {
+  margin-left: 0;
+}
 .profileContainer {
   /* width: 95%; */
-  border: 1px #ffffff;
-  /* background-color: rgba(0, 0, 0, 0.7); */
-  color: white;
+  background: rgba(00, 00, 00, 0.7);
+  /* height: 80vh; */
+  /* margin: 0 1rem; */
+  margin: 0 auto;
   padding: 1rem;
-  height: fit-content;
+  border-radius: 8px;
+  /* position: relative; */
+  width: 95%;
+  color: white;
   /* height: 85vh; */
 }
 
@@ -75,4 +82,26 @@
   padding: 1px;
   margin: 5px;
   flex-direction: column;
+}
+@media screen and (max-width: 650px) {
+  .job {
+    font-size: 25px;
+  }
+
+  .city {
+    /* width: fit-content; */
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .job {
+    /* width: fit-content; */
+    font-size: 22px;
+    /* background-color: #00800078; */
+  }
+
+  .city {
+    /* width: fit-content; */
+    font-size: 20px;
+  }
 }
