--- a/client/src/components/Swipe/swipe.css
+++ b/client/src/components/Swipe/swipe.css
@@ -1,12 +1,18 @@
-.grid_swipe {
-  background: rgba(0, 0, 0, 0.7);
-  /* padding: 1rem; */
-  width: 100%;
-  border-radius: 8px;
-  /* margin: 0 1rem; */
-  /* display: flex; */
+.row {
+  margin-left: 0;
 }
-
+.grid_swipe {
+  background: rgba(00, 00, 00, 0.7);
+  /* height: 80vh; */
+  /* margin: 0 1rem; */
+  padding: 1rem;
+  border-radius: 8px;
+  /* display: flex;
+  justify-content: center; */
+  /* position: relative; */
+  width: 95%;
+  margin: 0 auto;
+}
 .userImage {
   object-fit: fill;
   border-radius: 0.75rem;
@@ -46,7 +52,7 @@
 .cards_section {
   /* background: blue; */
   width: 100%;
-  height: 80vh;
+  max-height: 80vh;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -56,18 +62,36 @@
 .cardContainer {
   position: relative;
   width: 100%;
+  height: 700px;
   border-radius: 0.75rem;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  /* margin: 0 auto; */
+  /* justify-content: center; */
 }
-.card,
+.card {
+  height: 100%;
+  max-width: 40%;
+  padding: 1rem;
+}
+
 .cardContainer {
-  max-width: 30%;
-  height: 600px;
+  /* max-width: 30%; */
+  position: relative;
+  display: flex;
+
+  /* height: 600px; */
 }
 .card:hover {
   cursor: pointer;
 }
 .swipe {
   position: absolute;
+  /* background: blue; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .interest_section {
   display: inline-block;
@@ -76,4 +100,19 @@
 }
 .interest_section::-webkit-scrollbar {
   display: none;
+}
+@media screen and (max-width: 800px) {
+  .card {
+    max-width: 60%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .card {
+    max-width: 70%;
+  }
+}
+@media screen and (max-width: 420px) {
+  .card {
+    max-width: 100%;
+  }
 }
