--- a/client/src/components/LandingPage/landing.css
+++ b/client/src/components/LandingPage/landing.css
@@ -1,42 +1,51 @@
-.landingContainer{
-    /* height: auto; */
-    border-radius: 20px;
-    color: rgb(223, 204, 204);
+.landingContainer {
+  /* height: auto; */
+  border-radius: 20px;
+  color: rgb(223, 204, 204);
 }
-.matchBtn{
-    border: 2px solid #212121;
-    color: rgb(223, 204, 204);
-    margin-top: 2em;
-    border-radius: 50px;
-    background: #212121;
-    box-shadow:  -5px -5px 10px #2e2e2e,
-                 7px 7px 12px #252525;
+.matchBtn {
+  border: 2px solid #212121;
+  color: rgb(223, 204, 204);
+  margin-top: 2em;
+  border-radius: 50px;
+  background: #212121;
+  box-shadow: -5px -5px 10px #2e2e2e, 7px 7px 12px #252525;
 }
-.matchBtn:hover{
-    border: 2px solid #141414;
-    border-radius: 50px;
-    background: #333333;
-    box-shadow:  -7px -7px 14px #212121,
-                 7px 7px 14px #212121,
-                inset -2px -2px 5px #161616,
-                inset -4px -4px 8px #252525;
+.matchBtn:hover {
+  border: 2px solid #141414;
+  border-radius: 50px;
+  background: #333333;
+  box-shadow: -7px -7px 14px #212121, 7px 7px 14px #212121,
+    inset -2px -2px 5px #161616, inset -4px -4px 8px #252525;
 }
-.tag{
-    text-align: center;
+.tag {
+  text-align: center;
 }
 
-.col{
-    margin-top: 5em;
-    margin-bottom: 5em;
+.col {
+  margin-top: 5em;
+  margin-bottom: 5em;
 }
-.coverImg{
-    object-fit: contain;
-    width: 90%;
-    border-radius: 10px;
-    margin-left: 1em;
-    margin-right: 1em;
+.coverImg {
+  object-fit: contain;
+  width: 90%;
+  border-radius: 10px;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .splideImg {
-    border-radius: 15px;
+  /* margin: 1rem; */
+  border-radius: 15px;
+  /* width: 100%; */
+  /* width: 250px; */
+  width: 350px;
+  object-fit: cover;
+  height: 450px;
+}
+@media screen and (min-width: 1500px) {
+  .splideImg {
+    width: 450px;
+    height: 600px;
+  }
 }
