--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -2,28 +2,8 @@
 body {
   color: #585858;
 }
-/* .app-simple.light {
-  --app-background: #fff;
-  --app-color: #585858;
-  --app-avatar-background: #f0f3f7;
-  --app-info-color: #999;
-  --app-info-border: #d7e0e9;
-  --app-chat-background: #f0f3f7;
-  --app-people-color: #585858;
-  --app-people-active-color: #5babfc;
-}
-.app-simple.dark {
-  --app-background: #292b2f;
-  --app-color: #fff;
-  --app-avatar-background: #414348;
-  --app-info-color: #999;
-  --app-info-border: #414348;
-  --app-chat-background: #2f3136;
-  --app-people-color: #dcddde;
-  --app-people-active-color: #de2440;
-} */
+
 .app-simple {
-  /* background: red; */
   color: var(--app-color);
   display: flex;
   height: 100vh;
@@ -74,7 +54,6 @@ body {
 }
 .info {
   padding: 24px 24px 0;
-  /* background: green; */
 }
 .info h4 {
   margin: 0 0 2px;
@@ -83,14 +62,13 @@ body {
   color: var(--app-info-color);
 }
 .chat {
-  /* background: var(--app-chat-background); */
-  /* background-color: aqua; */
   border-radius: 25px;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   margin: 30px 30px 30px 0;
   position: relative;
+  height: 70%
 }
 .chat hr {
   background-color: var(--app-info-border);
