--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   height: 100vh;
   overflow: hidden;
+  color: black
 }
 .pn-member-list {
   --member__padding: 9px 0;
@@ -54,6 +55,8 @@ body {
 }
 .info {
   padding: 24px 24px 0;
+  /* background: #e67a8ea8; */
+
 }
 .info h4 {
   margin: 0 0 2px;
@@ -68,7 +71,8 @@ body {
   flex-grow: 1;
   margin: 30px 30px 30px 0;
   position: relative;
-  height: 70%
+  height: 70%;
+  color: black
 }
 .chat hr {
   background-color: var(--app-info-border);
@@ -81,6 +85,11 @@ body {
   height: 100%;
   overflow-y: auto;
   width: 100%;
+  background-color: #e67a8d6e;
+}
+
+.pn-msg-input__textarea {
+  background-color: #e67a8d6e;
 }
 
 .pn-channel {
@@ -99,6 +108,38 @@ body {
 
 .pn-channel--hover{
   background: #e67a8ec2;
+}
+
+.pn-msg-input--dark {
+  background: #e67a8e00;
+}
+
+/* .pn-msg-own {
+  --msg__avatar__margin: 2px 0 0 18px;
+  --msg__content__alignItems: flex-end;
+  --msg__flexDirection: row-reverse;
+  --msg__title__flexDirection: row-reverse;
+} */
+
+.pn-msg-own {
+  --msg__avatar__margin: 2px 0 0 18px;
+  --msg__content__alignItems: flex-end;
+  --msg__flexDirection: row-reverse;
+  --msg__title__flexDirection: row-reverse;
+}
+
+.pn-msg-list-scroller {
+  /* background-color: #e67a8e00; */
+  color:black
+}
+
+.pn-msg-list--dark {
+  background-color: #e67a8d6e;
+  color: black
+}
+
+.pn-msg {
+  color: black
 }
 
 .app-simple .members {
