--- a/client/src/components/Swipe/swipe.css
+++ b/client/src/components/Swipe/swipe.css
@@ -32,7 +32,7 @@
   max-width: 40%; */
 }
 .userImage:after {
-  content: "No Image for  "attr(alt);
+  content: "No Image for  " attr(alt);
   display: block;
   position: absolute;
   z-index: 0;
@@ -105,7 +105,7 @@
 
 /* .buttons {
 } */
-.buttons button {
+.buttons .button {
   display: flex;
   margin: 0;
   /* box-sizing: border-box; */
@@ -118,14 +118,14 @@
   width: 75px;
   height: 75px;
   align-items: center;
-  /* margin: 0 2rem; */
+  margin: 0 1rem;
   display: flex;
   color: #ae303b;
   justify-content: center;
 
   /* border: 2px solid #ff5e51; */
 }
-.buttons button:hover {
+.buttons .button:hover {
   box-shadow: inset 6px 6px 12px rgba(255, 255, 255, 0.1),
     inset -6px -6px 12px rgba(163, 14, 59, 0.3);
 }
