test Chat styling

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,9 +1,33 @@
 :root {
   --chat--light__hover--2: #e4e9f000;
-  --chat--light__background--1: #e4e9f000
+  --chat--light__background--1: #e4e9f000;
+  --app-background: #ffffff00;
+  --app-color: #ffffff00;
+  --app-avatar-background: #ffffff00;
+  --app-info-color: #ffffff00;
+  --app-info-border: #ffffff00;
+  --app-chat-background: #ffffff00;
+  --app-people-color: #ffffff00;
+  --app-people-active-color: #ffffff00;
+  --chat--light__background--1: #ffffff00;
+  --chat--light__background--2: #ffffff00;
+  --chat--light__background--3: #ffffff00;
+  --chat--light__background--4: #ffffff00;
+  /* --chat--light__background--5-rgb: #{hexToRGB(#ef3a43)}; */
+  /* --chat--light__background--6: #{rgba(#1c1c1c, 0.8)}; */
+  --chat--light__color--1: #ffffff00;
+  --chat--light__color--2: #ffffff00;
+  /* --chat--light__color--2-rgb: #{hexToRGB(#999999)}; */
+  --chat--light__color--3: #ffffff00;
+  --chat--light__border--1: #ffffff00;
+  --chat--light__border--2: #ffffff00;
+  --chat--light__hover--1: #ffffff00;
+  --chat--light__hover--2: #ffffff00;
+  --chat--light__hover--3: #ffffff00;
+  --chat--light__hover--4: #ffffff00;
 }
 
-.app-simple.light {
+/* .app-simple.light {
   --app-background: #ffffff00;
   --app-color: #ffffff00;
   --app-avatar-background: #ffffff00;
@@ -23,11 +47,11 @@
   --app-chat-background: #ffffff00;
   --app-people-color: #ffffff00;
   --app-people-active-color: #ffffff00;
-}
+} */
 
-body {
-  /* color: #585858; */
-}
+/* body {
+  color: #585858;
+} */
 
 .app-simple {
   /* color: var(--app-color); */
