--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -40,6 +40,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   transition: all 0.25s ease;
   animation: fadeInRight 0.25s ease forwards;
+  height: fit-content;
   /* opacity: 0; */
 }
 .vertical {
