add extra information to swipe card

--- a/client/src/components/Profile/InterestItem.css
+++ b/client/src/components/Profile/InterestItem.css
@@ -1,11 +1,10 @@
 .interestItem {
-    display:flex;
-    border: rgba(255, 255, 255, 0.387);
-    padding: 5px;
-    background-color: #e67a8d;
-    border-radius: 15px;
-    justify-content: beginning;
-    width: 40%;
-    margin: 10px 10px 0 0;
+  display: flex;
+  border: rgba(255, 255, 255, 0.387);
+  padding: 5px;
+  background-color: #e67a8d;
+  border-radius: 15px;
+  justify-content: center;
+  width: 40%;
+  margin: 10px 10px 0 0;
 }
-
