--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -6,70 +6,19 @@
   align-items: center;
 }
 
-.header ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  display: flex;
-  bottom: 0px;
-  align-items: center;
-}
 .logo {
   width: 20%;
-  /* display: inline-flex; */
   justify-content: center;
   align-items: center;
 }
-.header li {
-  float: left;
-  padding-top: 0;
-  padding-bottom: 0;
-  border-style: none;
-  min-width: 80px;
-  margin-right: 10px;
-  justify-content: center;
-}
-.header .a {
-  /* display: block; */
-  padding: 8px;
-  /* font-family: "Open Sans", sans-serif; */
-  font-style: normal;
-  font-size: 20px;
-  font-weight: 400;
-  display: flex;
-  text-decoration: none;
-  color: white;
-}
-.header .a:hover {
-  /* opacity: 0.6; */
-}
-/* .sign_in {
-  border: 1px solid #a30e3b;
-  background: #a30e3b;
-  border-radius: 10px;
-} */
-.sign_in {
-  /* border-radius: 15px;
-  background: #212121;
-  box-shadow: inset 5px -5px 10px #1c1717,
-              inset -5px 5px 10px #322929; */
 
+.sign_in {
   background: #a30e3b;
   padding: 10px;
-  /* font-size: 1rem; */
-  /* font-weight: 500; */
   border-radius: 16px;
   border: none;
-  /* width: 45%; */
-  /* margin: 0 auto; */
-  /* display: flex; */
-  /* justify-content: center; */
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-color: #ae303b;
-  /* width: 86px; */
-  /* height: 86px; */
-  /* border-radius: 38%; */
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7),
     -1px -1px 8px rgba(255, 255, 255, 0.2);
 }
@@ -82,23 +31,24 @@
 @media screen and (max-width: 810px) {
   .logo {
     width: 45%;
-    display: flex;
     justify-content: center;
     align-self: center;
   }
   .header {
     display: flex;
     flex-direction: column;
-    /* width: 100%; */
   }
-  .header span {
-    margin: 20px;
-  }
+
   .header a {
     font-size: 15px;
   }
 }
 @media screen and (max-width: 400px) {
+  .logo {
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+  }
   .header {
     display: flex;
     justify-content: space-between;
@@ -107,9 +57,7 @@
     padding-bottom: 1rem;
     align-items: center;
   }
-  .header ul {
-    padding-top: 15px;
-  }
+
   .header a {
     font-size: 15px;
   }
