--- a/client/src/components/Matches/Matches.css
+++ b/client/src/components/Matches/Matches.css
@@ -39,7 +39,14 @@
   position: absolute;
   bottom: 0;
 }
-
+.overlay_card {
+  background: black;
+  opacity: 0.7;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
+}
 .card_match:hover .img_match {
   transform: scale(1.1);
 }
